--- a/tetris-servlets/pom.xml
+++ b/tetris-servlets/pom.xml
@@ -9,4 +9,32 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <properties>
+        <maven.compiler.source>1.13</maven.compiler.source>
+        <maven.compile.target>1.13</maven.compile.target>
+    </properties>
+
+    <dependencies>
+        <!-- Servlet API 4.0 for tomcat 9 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- JavaServer Pages API 2.3 for tomcat 9 -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
 </project>
